# aya-tools

execsnoop/: Cargo.toml
execsnoop/common/src/: lib.rs
execsnoop/ebpf/: Cargo.toml  rust-toolchain.toml
execsnoop/ebpf/src/: main.rs
execsnoop/src/: main.rs
execsnoop/xtask/src/: build_ebpf.rs  main.rs  run.rs
tcptop/: Cargo.toml  README.md
tcptop/tcptop/: Cargo.toml
tcptop/tcptop-common/: Cargo.toml
tcptop/tcptop-common/src/: lib.rs
tcptop/tcptop-ebpf/: Cargo.toml
tcptop/tcptop-ebpf/src/: main.rs  vmlinux.rs
tcptop/tcptop/src/: main.rs
tcptop/xtask/src/: build_ebpf.rs  run.rs
