[package]
name = "tcptop"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", branch = "main" , features=["async_tokio"]}
aya-log = { git = "https://github.com/aya-rs/aya", branch = "main" }
tcptop-common = { path = "../tcptop-common", features = ["user"] }
anyhow = "1"
env_logger = "0.10"
log = "0.4"
tokio = { version = "1.25", features = ["time", "macros", "rt", "rt-multi-thread", "net", "signal"] }

[[bin]]
name = "tcptop"
path = "src/main.rs"
